feat: interpretation panel (#149)

--- a/src/css/App.css
+++ b/src/css/App.css
@@ -44,7 +44,6 @@ a:hover {
     text-decoration: 3px underline #5bb6ea;
 }
 
-
 .vis-panel {
     .vis-overview-panel {
         position: absolute;
@@ -68,7 +67,6 @@ a:hover {
             border-bottom: 1px solid lightgray;
             background: #f6f6f6;
 
-        
             .config-button {
                 svg {
                     vertical-align: unset;
@@ -86,7 +84,7 @@ a:hover {
             .feedback a:hover {
                 background-color: #eaeaea;
             }
-            
+
             .title-github-link:active,
             .title-doc-link:active,
             .feedback a:active {
@@ -128,7 +126,6 @@ a:hover {
         right: 5px;
         top: 12px;
     }
-
 
     .vis-overview-panel .overview-container {
         display: flex;
@@ -234,7 +231,8 @@ a:hover {
     cursor: pointer;
 }
 
-.chromoscope-title:focus, .chromoscope-title:focus-visible {
+.chromoscope-title:focus,
+.chromoscope-title:focus-visible {
     /* padding: 5px; */
 }
 
@@ -638,7 +636,6 @@ a:hover {
     position: absolute;
     box-shadow: 0 0 10px 0px #00000032;
     bottom: 20px;
-    right: 20px;
     cursor: pointer;
     z-index: 998;
     opacity: 0.5;
@@ -830,7 +827,8 @@ a:hover {
 .track-tooltip:hover {
     cursor: pointer;
 }
-.track-tooltip:focus, .track-tooltip:focus-visible {
+.track-tooltip:focus,
+.track-tooltip:focus-visible {
     outline-offset: 2px;
 }
 
@@ -897,6 +895,490 @@ a:hover {
 }
 .navigation-button:active:not(:disabled) {
     background-color: #e6e4e4;
+}
+
+.clinical-panel-container {
+    box-sizing: border-box !important;
+    position: fixed;
+    top: 50px;
+    right: 0px;
+    width: 250px;
+    height: calc(100% - 50px);
+    background-image: url(data:image/svg+xml;base64,PHN2ZyB4bWxucz0naHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmcnIHdpZHRoPSc1JyBoZWlnaHQ9JzUnPgo8cmVjdCB3aWR0aD0nNScgaGVpZ2h0PSc1JyBmaWxsPScjZmZmJy8+CjxyZWN0IHdpZHRoPScxJyBoZWlnaHQ9JzEnIGZpbGw9JyNjY2MnLz4KPC9zdmc+);
+    background-position-x: -1px;
+
+    .clinical-panel {
+        box-sizing: border-box !important;
+        display: flex;
+        flex-direction: column;
+        margin-top: 10px;
+        padding: 10px 10px 20px;
+        border-radius: 10px 0px 0px 10px;
+        height: 100%;
+        background-color: #eef2f6;
+        border: 1px solid #d7dfe4;
+    }
+
+    .panel-header {
+        display: flex;
+        justify-content: space-between;
+        align-items: baseline;
+        padding: 0px 0px 6px 0px;
+        border-bottom: 1px solid #cad3da;
+        margin-bottom: 10px;
+
+        .panel-icon {
+            color: #434d5e;
+            height: 20px;
+            margin: 0px;
+        }
+
+        h2 {
+            font-size: 1rem;
+            font-weight: 600;
+            color: #2c3648;
+            margin-bottom: 0px;
+        }
+
+        .collapse-panel {
+            box-sizing: border-box !important;
+            display: flex;
+            justify-content: center;
+            width: 20px;
+            height: 20px;
+            background-color: #f5f5f5;
+            border: 1px solid #cad3da;
+            border-radius: 100%;
+            padding: 3px;
+            svg {
+                margin: auto;
+                color: #4d565c;
+            }
+        }
+    }
+
+    .content {
+        display: flex;
+        flex: 1;
+        flex-direction: column;
+        justify-content: flex-start;
+        padding: 0px;
+        overflow-y: auto;
+
+        .panel-section {
+            box-sizing: border-box !important;
+            display: flex;
+            flex: 1;
+            flex-direction: column;
+            justify-content: flex-start;
+            background-color: #ffffff;
+            /* border: 1px solid #CAD3DA; */
+            border-radius: 8px;
+            overflow: hidden;
+            margin-bottom: 16px;
+
+            .section-header {
+                display: flex;
+                justify-content: space-between;
+                background-color: #202f48;
+                padding: 10px;
+                border: none;
+
+                h3 {
+                    font-weight: 600;
+                    color: white;
+                    font-size: 0.875rem;
+                    margin: 0px;
+                }
+
+                .section-toggle {
+                    display: flex;
+                    justify-content: center;
+                    padding: 0px;
+                    height: 12px;
+                    width: 12px;
+                    border: none;
+                    background-color: transparent;
+                    margin: auto 0px;
+
+                    svg {
+                        margin: auto;
+                        color: white;
+                    }
+                }
+            }
+            .callout {
+                padding: 4px;
+                border-bottom: 1px solid #e0e6eb;
+
+                .content {
+                    display: flex;
+                    flex-direction: row;
+                    justify-content: center;
+                    background-color: #e9edf2;
+                    padding: 5px 8px;
+                    border-radius: 5px;
+
+                    svg {
+                        margin: auto 8px auto 0px;
+                        color: #464e55;
+                        height: 10px;
+                        width: 10px;
+                    }
+                    span {
+                        color: #464e55;
+                        font-size: 0.625rem;
+                    }
+                }
+            }
+
+            .section:focus-visible,
+            .section:focus {
+                outline-offset: -1px;
+            }
+            .section-body {
+                display: flex;
+                flex-direction: column;
+                flex: 1;
+                box-sizing: border-box !important;
+                overflow-y: scroll;
+                padding: 0px 8px;
+                font-size: 0.75rem;
+                border: solid #cad3da;
+                border-width: 0px 1px 1px 1px;
+                border-radius: 0px 0px 8px 8px;
+
+                .data-list {
+                    padding: 0px;
+                    margin-bottom: 0px;
+
+                    .data-row {
+                        box-sizing: border-box !important;
+                        display: flex;
+                        justify-content: flex-start;
+                        padding: 8px 0px;
+                        border-bottom: 1px solid #e0e6eb;
+
+                        .data-label {
+                            flex: 3;
+                            color: #565961;
+                            font-weight: 600;
+                        }
+
+                        .data-value {
+                            flex: 2;
+                            color: #000000;
+                        }
+                    }
+
+                    .data-row:last-of-type {
+                        border-bottom: none;
+                    }
+
+                    .data-row.clickable:hover {
+                        cursor: pointer;
+                        font-weight: 600;
+                    }
+                }
+            }
+        }
+
+        /* Style individual sections */
+        .panel-section.summary {
+            flex: 3;
+
+            .section-body {
+                .callout {
+                    padding: 5px 0px;
+                    .content {
+                        padding: 4px 12px;
+                        display: flex;
+                        background-color: #ffefdb;
+                        border: 1px solid #f6e4cd;
+                        border-radius: 10px;
+
+                        span {
+                            font-size: 0.75rem;
+                            color: #502d07;
+                            margin: auto;
+                            text-align: center;
+                        }
+                    }
+                }
+            }
+        }
+        .panel-section.variants {
+            flex: 2;
+            .section-body {
+                padding: 0px;
+
+                .data-list {
+                    overflow: scroll;
+                    .data-row {
+                        padding: 8px;
+                    }
+                    .data-row:nth-of-type(even) {
+                        background-color: #f5f5f5;
+                    }
+                }
+            }
+        }
+        .panel-section.signatures {
+            flex: 4;
+
+            .callout.hrdetect {
+                display: flex;
+                justify-content: space-between;
+                padding: 10px;
+                border: solid #cad3da;
+                border-width: 0px 1px;
+
+                .label {
+                    flex: 1;
+                    color: #565961;
+                    font-size: 0.75rem;
+                    font-weight: 500;
+                }
+
+                .value {
+                    flex: 1;
+                    color: #000000;
+                    font-size: 0.75rem;
+                    font-weight: 500;
+
+                    .circle-icon {
+                        width: 8px;
+                        height: 8px;
+                    }
+                    .circle-icon.positive {
+                        color: #1d9819;
+                    }
+                    .circle-icon.negative {
+                        color: lightgray;
+                    }
+
+                    span {
+                        margin-left: 5px;
+                    }
+                }
+            }
+
+            .section-body {
+                padding: 0px;
+                overflow: hidden;
+
+                .data-list {
+                    .data-row:nth-of-type(even) {
+                        background-color: #f5f5f5;
+                    }
+
+                    .data-row {
+                        display: inline-block;
+                        width: 100%;
+                        padding: 10px 8px;
+
+                        .data-label {
+                            display: inline;
+                            flex: none;
+                            color: #000000;
+                            font-weight: 600;
+                            margin-right: 0.25rem;
+                        }
+                        .data-value {
+                        }
+                    }
+                }
+            }
+        }
+
+        /* Expanded and collapsed */
+        .panel-section.expanded {
+            max-height: fit-content;
+            .section-header {
+                .section-toggle {
+                    svg {
+                        transform: rotate(180deg);
+                    }
+                }
+            }
+        }
+        .panel-section.collapsed {
+            flex: none;
+            max-height: none;
+            .section-body {
+                flex: none;
+                padding: 0px;
+                height: 0px;
+                border: none;
+            }
+
+            .callout.hrdetect {
+                display: none;
+            }
+
+            .section-header {
+                .section-toggle {
+                    svg {
+                        transform: none;
+                    }
+                }
+            }
+        }
+
+        /* Styles for toggle-able rows */
+        .dropdown-row {
+            display: flex;
+            flex-direction: column;
+            overflow: scroll;
+
+            .header {
+                box-sizing: border-box !important;
+                display: flex;
+                width: 100%;
+                justify-content: space-between;
+                background-color: #e0e6eb;
+                padding: 10px;
+                border: 1px solid #cad3da;
+                border-width: 1px 0px;
+
+                h4 {
+                    font-weight: 600;
+                    color: #2c3648;
+                    font-size: 0.75rem;
+                    margin: 0px;
+                }
+
+                .toggle {
+                    display: flex;
+                    justify-content: center;
+                    padding: 0px;
+                    height: 12px;
+                    width: 12px;
+                    border: none;
+                    background-color: transparent;
+                    margin: auto 0px;
+
+                    svg {
+                        margin: auto;
+                        color: #55606b;
+                    }
+                }
+            }
+            .header:hover {
+                background-color: #d5dce2;
+            }
+
+            .body {
+                overflow: scroll;
+            }
+        }
+        .dropdown-row.expanded {
+            flex: 1;
+            max-height: fit-content;
+
+            .header {
+                .toggle {
+                    svg {
+                        transform: rotate(180deg);
+                    }
+                }
+            }
+            .body {
+                flex: 1;
+            }
+        }
+        .dropdown-row.collapsed {
+            flex: none;
+            max-height: none;
+
+            .header {
+                .toggle {
+                    border-bottom: 0px;
+                    svg {
+                        transform: none;
+                    }
+                }
+            }
+            .callout {
+                display: none;
+            }
+            .body {
+                height: 0px;
+            }
+        }
+        .dropdown-row.disabled {
+            .header {
+                background-color: #f5f5f5;
+                pointer-events: none;
+                border-bottom: none;
+                h4 {
+                    color: gray;
+                }
+                .toggle {
+                    svg {
+                        transform: none;
+                        color: gray;
+                    }
+                }
+            }
+        }
+    }
+}
+
+.clinical-panel-container.open {
+    box-sizing: border-box !important;
+    position: fixed;
+    top: 50px;
+    right: 0px;
+    width: 250px;
+    height: calc(100% - 50px);
+    background-image: url(data:image/svg+xml;base64,PHN2ZyB4bWxucz0naHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmcnIHdpZHRoPSc1JyBoZWlnaHQ9JzUnPgo8cmVjdCB3aWR0aD0nNScgaGVpZ2h0PSc1JyBmaWxsPScjZmZmJy8+CjxyZWN0IHdpZHRoPScxJyBoZWlnaHQ9JzEnIGZpbGw9JyNjY2MnLz4KPC9zdmc+);
+    background-position-x: -1px;
+}
+.clinical-panel-container.closed {
+    width: 45px;
+
+    .clinical-panel {
+        width: 100%;
+    }
+
+    .panel-header {
+        flex-direction: column-reverse;
+        justify-content: center;
+        align-items: center;
+        gap: 8px;
+        border: none;
+
+        h2 {
+            display: none;
+        }
+
+        .collapse-panel {
+            svg {
+                transform: rotate(180deg);
+            }
+        }
+    }
+
+    .panel-section {
+        display: none;
+    }
+}
+
+.clinical-panel-container.closed.disabled {
+    .clinical-panel {
+        background-color: #f5f5f5;
+
+        .panel-header {
+            .panel-icon {
+                color: gray;
+            }
+
+            .collapse-panel {
+                display: none;
+            }
+        }
+    }
 }
 
 /* Minimal Mode styles */
@@ -1156,7 +1638,7 @@ a:hover {
             max-height: 80vh;
             overflow-y: scroll;
             display: flex;
-            justify-content: center;
+            justify-content: start;
             padding: 24px 36px;
             width: 100%;
 
