--- a/src/css/ClinicalPanel.css
+++ b/src/css/ClinicalPanel.css
@@ -165,6 +165,7 @@
                             flex: 3;
                             color: #565961;
                             font-weight: 600;
+                            word-break: break-all;
                         }
 
                         .data-value {
