--- a/src/css/InstructionsModal.css
+++ b/src/css/InstructionsModal.css
@@ -1,7 +1,10 @@
-.instructions-modals-container {
+.instructions-modals-container.vanilla {
     .modal {
+
         .modal-dialog {
-            width: 100%;
+            margin: 30px auto;
+            width: 95%;
+            max-width: 95%;
         }
 
         .modal-content {
@@ -10,7 +13,7 @@
         .modal-body {
             box-sizing: border-box !important;
             max-height: 80vh;
-            overflow-y: scroll;
+            overflow-y: auto;
             display: flex;
             justify-content: start;
             padding: 0px;
@@ -23,7 +26,7 @@
                 justify-content: start;
                 padding: 20px 30px;
                 border-right: 1px solid #b0b0b0;
-                width: 230px;
+                width: 200px;
                 background-color: #202f48;
 
                 .navigation-panel-icon {
@@ -75,7 +78,7 @@
                             height: auto;
                         }
                         span {
-                            font-size: 1.125rem;
+                            font-size: 1rem;
                             font-weight: 600;
                             margin-left: 16px;
                             text-align: center;
@@ -100,7 +103,7 @@
                 display: flex;
                 flex: 1;
                 flex-direction: column;
-                padding: 0px 0px 10px 0px;
+                padding: 0px;
 
                 .header {
                     display: flex;
@@ -108,23 +111,146 @@
                     background-color: #eef2f6;
                     padding: 20px;
                 }
+
+                .section-header {
+                    border-bottom: 1px solid black;
+                    padding-bottom: 10px;
+                    background-color: #F3F8FE;
+                    border-bottom: 1px solid #BBC5E1;
+                    color: black;
+                    margin: 0px;
+                    padding: 30px 20px 15px;
+
+                    h4 {
+                        font-size: 1.125rem;
+                        font-weight: 500;
+                        margin-bottom: 5px;
+                    }
+
+                    h3 {
+                        font-size: 1.25rem;
+                        font-weight: 400;
+                    }
+                }
+                
+                .section-labels {
+                    display: flex;
+                    position: sticky;
+                    background-color: white;
+                    border-bottom: 1px solid #BBC5E1;
+                    top: 0px;
+                    z-index: 1;
+                    padding: 0px 30px;
+
+                    h4 {
+                        display: flex;
+                        flex: 1;
+                        font-weight: 600;
+                        font-size: 1.25rem;
+                        padding: 15px 0px 15px 3rem;
+                        margin-bottom: 0px;
+                        color: #0A2B47;
+
+                        &:first-of-type {
+                            background-color: transparent;
+                        }
+                    }
+                }
+
+                .section-content {
+                    padding-top: 50px;
+
+                    .block.triad {
+                        position: relative;
+                        display: flex;
+                        flex-direction: column;
+                        border-top: 1px solid #DADADA;
+                        margin: 0px 30px;
+
+                        .block-header {
+                            display: flex;
+                            position: absolute;
+                            padding: 20px 20px 10px 0px;
+                            background-color: white;
+                            transform: translate(0px, -50%);
+                            width: max-content;
+                            
+                            span {
+                                background-color: #E2EEFF;
+                                padding: 8px 15px;
+                                font-size: 0.875rem;
+                                border-radius: 15px;
+                                font-weight: 300;
+                                
+                                b {
+                                    font-weight: 600;
+                                }
+                            }
+                        }
+
+                        .block-items {
+                            padding: 50px 0px;
+                            display: flex;
+                            flex-direction: row;
+
+                            .block-item {
+                                flex: 1;
+                                display: flex;
+                                justify-content: center;
+
+                                .text {
+                                    padding: 0rem 1rem 0rem 3rem;
+
+                                    .example-link {
+                                        color: #3792FD;
+                                    }
+
+                                    .gene-search-image {
+                                        width: 150px;
+                                    }
+                                    span.text-button-example {
+                                        display: inline-flex;
+                                        justify-content: center;
+                                        background-color: #efefef;
+                                        width: 25px;
+                                        height: 25px;
+                                        border-radius: 10px 0px 0px 10px;
+                                        border: 2px solid lightgray;
+        
+                                        b {
+                                            line-height: 20px;
+                                            margin: auto auto 5px;
+                                        }
+                                    }
+                                    span.text-button-example.right {
+                                        border-radius: 0px 10px 10px 0px;
+                                    }
+                                }
+                            }
+                            .block-item {
+                                .image {
+                                    padding: 0px;
+                                    margin: 0px;
+                                    border: 1px solid #E7E7E7;
+                                }
+                            }
+                        }
+                    }
+                }
             }
 
             .modal-body-content {
                 display: flex;
                 flex-direction: column;
-                padding: 20px;
-                overflow: scroll;
-                margin: 8px 8px 0px 0px;
+                padding: 0px 0px 30px 0px;
+                overflow: auto;
+                overflow-y: scroll;
+                width: 100%;
             }
             .section {
                 display: flex;
                 flex-direction: column;
                 /* margin-bottom: 20px; */
-
-                .section-content {
-                    padding: 0px 55px;
-                }
 
                 h3 {
                     font-size: 1.25rem;
@@ -198,6 +324,215 @@
                             span.text-button-example.right {
                                 border-radius: 0px 10px 10px 0px;
                             }
+                        }
+                    }
+                }
+                .block.triad {
+                    display: flex;
+                    flex-direction: row;
+                    justify-content: space-between;
+                    
+                    .block-item {
+                        display: flex;
+                        flex: 1;
+                        flex-direction: column;
+
+                        img {
+                            width: 100%;
+                        }
+                    }
+
+                }
+            }
+        }
+    }
+    .modal.genome-view, .modal.variant-view {
+        .modal-body {
+            box-sizing: border-box !important;
+            max-height: 80vh;
+            overflow-y: scroll;
+            display: flex;
+            justify-content: start;
+            padding: 24px 36px;
+            width: 100%;
+
+            .modal-body-content {
+                display: flex;
+                flex-direction: column;
+                width: 100%;
+            }
+            .section {
+                display: flex;
+                flex-direction: column;
+                /* margin-bottom: 20px; */
+
+                .section-content {
+                    padding: 0px 55px;
+                }
+
+                h3 {
+                    font-size: 1.25rem;
+                    font-weight: 600;
+                    margin-bottom: 4px;
+                }
+
+                hr {
+                    color: #cdcdcd;
+                    border-width: 1px;
+                    margin: 0px;
+                }
+                hr.header {
+                    color: #b0b0b0;
+                    border-width: 2px;
+                }
+
+                .block {
+                    flex: 1;
+                    display: flex;
+                    margin: 32px 0px;
+                    min-height: 120px;
+                }
+                .block.with-image {
+                    justify-content: center;
+                    height: auto;
+
+                    .image-container.two-image {
+                        display: flex;
+                        flex-direction: column;
+                    }
+
+                    img {
+                        width: 250px;
+                        height: fit-content;
+                        margin: auto 0px;
+                        border: 2px solid #ebebeb;
+                        object-fit: contain;
+                    }
+
+                    .text {
+                        display: flex;
+                        width: 300px;
+                        flex-direction: column;
+                        justify-content: space-evenly;
+                        margin-left: 60px;
+
+                        p {
+                            margin-bottom: 0px;
+
+                            span.text-button-example {
+                                display: inline-flex;
+                                justify-content: center;
+                                background-color: #efefef;
+                                width: 25px;
+                                height: 25px;
+                                border-radius: 10px 0px 0px 10px;
+                                border: 2px solid lightgray;
+
+                                b {
+                                    line-height: 20px;
+                                    margin: auto auto 5px;
+                                }
+                            }
+                            span.text-button-example.right {
+                                border-radius: 0px 10px 10px 0px;
+                            }
+                        }
+                    }
+                }
+            }
+        }
+    }
+    
+}
+.instructions-modals-container.minimal {
+    .modal-body {
+        box-sizing: border-box !important;
+        max-height: 80vh;
+        overflow-y: scroll;
+        display: flex;
+        justify-content: start;
+        padding: 24px 36px;
+        width: 100%;
+
+        .modal-body-content {
+            display: flex;
+            flex-direction: column;
+            width: 100%;
+        }
+        .section {
+            display: flex;
+            flex-direction: column;
+            /* margin-bottom: 20px; */
+
+            .section-content {
+                padding: 0px 55px;
+            }
+
+            h3 {
+                font-size: 1.25rem;
+                font-weight: 600;
+                margin-bottom: 4px;
+            }
+
+            hr {
+                color: #cdcdcd;
+                border-width: 1px;
+                margin: 0px;
+            }
+            hr.header {
+                color: #b0b0b0;
+                border-width: 2px;
+            }
+
+            .block {
+                flex: 1;
+                display: flex;
+                margin: 32px 0px;
+                min-height: 120px;
+            }
+            .block.with-image {
+                justify-content: center;
+                height: auto;
+
+                .image-container.two-image {
+                    display: flex;
+                    flex-direction: column;
+                }
+
+                img {
+                    width: 250px;
+                    height: fit-content;
+                    margin: auto 0px;
+                    border: 2px solid #ebebeb;
+                    object-fit: contain;
+                }
+
+                .text {
+                    display: flex;
+                    width: 300px;
+                    flex-direction: column;
+                    justify-content: space-evenly;
+                    margin-left: 60px;
+
+                    p {
+                        margin-bottom: 0px;
+
+                        span.text-button-example {
+                            display: inline-flex;
+                            justify-content: center;
+                            background-color: #efefef;
+                            width: 25px;
+                            height: 25px;
+                            border-radius: 10px 0px 0px 10px;
+                            border: 2px solid lightgray;
+
+                            b {
+                                line-height: 20px;
+                                margin: auto auto 5px;
+                            }
+                        }
+                        span.text-button-example.right {
+                            border-radius: 0px 10px 10px 0px;
                         }
                     }
                 }
